--- a/web/index.html
+++ b/web/index.html
@@ -37,16 +37,31 @@
   <title>testest</title>
   <link rel="manifest" href="manifest.json">
 
+  <script type="text/javascript">
+    window.flutterWebRenderer = "html";
+  </script>
   
   <script>
     // The value below is injected by flutter build, do not touch.
     var serviceWorkerVersion = null;
   </script>
   <!-- This script adds the flutter initialization JS code -->
+  
+  <script type="text/javascript">
+    window.flutterWebRenderer = "html";
+  </script>
   <script src="flutter.js" defer></script>
+
+  <script type="text/javascript">
+    window.flutterWebRenderer = "html";
+  </script>
+
 </head>
 <body>
-
+  
+  <script type="text/javascript">
+    window.flutterWebRenderer = "html";
+  </script>
   <script src="main.dart.js" type="application/javascript"></script>
   <script>
     window.addEventListener('load', function(ev) {
@@ -61,6 +76,10 @@
         return appRunner.runApp();
       });
     });
+  </script>
+
+  <script type="text/javascript">
+    window.flutterWebRenderer = "html";
   </script>
 </body>
 </html>
