--- a/web/index.html
+++ b/web/index.html
@@ -1,10 +1,5 @@
 <!DOCTYPE html>
 <html>
-
-<script type="text/javascript">
-   window.flutterWebRenderer = "html";
-</script>
-
 <head>
   <!--
     If you are serving your web app in a path other than the root, change the
@@ -28,41 +23,23 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="testest">
+  <meta name="apple-mobile-web-app-title" content="igem">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>testest</title>
+  <title>igem</title>
   <link rel="manifest" href="manifest.json">
 
-  <script type="text/javascript">
-    window.flutterWebRenderer = "html";
-  </script>
-  
   <script>
     // The value below is injected by flutter build, do not touch.
     var serviceWorkerVersion = null;
   </script>
   <!-- This script adds the flutter initialization JS code -->
-  
-  <script type="text/javascript">
-    window.flutterWebRenderer = "html";
-  </script>
   <script src="flutter.js" defer></script>
-
-  <script type="text/javascript">
-    window.flutterWebRenderer = "html";
-  </script>
-
 </head>
 <body>
-  
-  <script type="text/javascript">
-    window.flutterWebRenderer = "html";
-  </script>
-  <script src="main.dart.js" type="application/javascript"></script>
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
@@ -76,10 +53,6 @@
         return appRunner.runApp();
       });
     });
-  </script>
-
-  <script type="text/javascript">
-    window.flutterWebRenderer = "html";
   </script>
 </body>
 </html>
