--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,10 @@
   <script src="flutter.js" defer></script>
 </head>
 <body>
+
+<script>
+	window.flutterWebRenderer = "html";
+</script>
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
