--- a/web/index.html
+++ b/web/index.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html><html><head>
+<!DOCTYPE html>
+<html>
+<head>
   <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
@@ -21,13 +23,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="homeprojectpageflutter">
+  <meta name="apple-mobile-web-app-title" content="igem">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>homeprojectpageflutter</title>
+  <title>igem</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
@@ -35,12 +37,13 @@
     var serviceWorkerVersion = null;
   </script>
   <!-- This script adds the flutter initialization JS code -->
-  <script src="flutter.js" defer=""></script>
-  <link rel="stylesheet" type="text/css" href="splash/style.css">
-  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
-  <script src="splash/splash.js"></script>
+  <script src="flutter.js" defer></script>
 </head>
 <body>
+
+<script>
+	window.flutterWebRenderer = "html";
+</script>
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
@@ -55,6 +58,5 @@
       });
     });
   </script>
-
-
-</body></html>
+</body>
+</html>
