--- a/404.html
+++ b/404.html
@@ -29,7 +29,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>igem</title>
+  <title>Thailand_RIS</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
