--- a/web/404.html
+++ b/web/404.html
@@ -29,7 +29,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>yoooo</title>
+  <title>404hi</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
