--- a/web/collaborations.html
+++ b/web/collaborations.html
@@ -34,10 +34,10 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '2198459989';
+    var serviceWorkerVersion = '2856650746';
   </script>
   <!-- This script adds the flutter initialization JS code -->
-  <script src="collab_flutter.js" defer></script>
+  <script src="flutter.js" defer></script>
 </head>
 <body>
   <script>
